Use single GLib/GTK+ includes. Patch by Maxim Ermilov (#560432).
2008-12-06  Cosimo Cecchi  <cosimoc@gnome.org>

	* cut-n-paste-code/libegg/eggtreemultidnd.c:
	* cut-n-paste-code/libegg/eggtreemultidnd.h:
	* libnautilus-extension/nautilus-menu.c:
	* libnautilus-private/nautilus-directory-notify.h:
	* libnautilus-private/nautilus-file-operations.c:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-icon-info.h:
	* libnautilus-private/nautilus-idle-queue.h:
	* libnautilus-private/nautilus-monitor.h:
	* libnautilus-private/nautilus-search-engine-simple.c:
	* src/file-manager/fm-list-model.c:
	* src/file-manager/fm-list-model.h:
	* src/file-manager/fm-list-view.c:
	* src/nautilus-emblem-sidebar.h:
	* src/nautilus-notebook.c:
	* src/nautilus-notebook.h:
	Use single GLib/GTK+ includes. Patch by Maxim Ermilov (#560432).

svn path=/trunk/; revision=14797

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2008-12-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* cut-n-paste-code/libegg/eggtreemultidnd.c:
+	* cut-n-paste-code/libegg/eggtreemultidnd.h:
+	* libnautilus-extension/nautilus-menu.c:
+	* libnautilus-private/nautilus-directory-notify.h:
+	* libnautilus-private/nautilus-file-operations.c:
+	* libnautilus-private/nautilus-file.c:
+	* libnautilus-private/nautilus-icon-info.h:
+	* libnautilus-private/nautilus-idle-queue.h:
+	* libnautilus-private/nautilus-monitor.h:
+	* libnautilus-private/nautilus-search-engine-simple.c:
+	* src/file-manager/fm-list-model.c:
+	* src/file-manager/fm-list-model.h:
+	* src/file-manager/fm-list-view.c:
+	* src/nautilus-emblem-sidebar.h:
+	* src/nautilus-notebook.c:
+	* src/nautilus-notebook.h:
+	Use single GLib/GTK+ includes. Patch by Maxim Ermilov (#560432).
+
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
