--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-07  Mario Blättermann  <mariobl@svn.gnome.org>
+
+	* de.po: Fixed some errors in German translation.
+
 === nautilus 2.24.2 ===
 	
 2008-11-11  Mark Krapivner  <mark125@gmail.com>
