--- a/po/de.po
+++ b/po/de.po
@@ -40,8 +40,8 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-11 08:27+0200\n"
-"PO-Revision-Date: 2008-09-11 08:27+0200\n"
-"Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
+"PO-Revision-Date: 2008-12-07 08:27+0200\n"
+"Last-Translator: Mario Blättermann <mariobl@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1305,11 +1305,11 @@ msgstr "Eine leere Picture-CD wurde eingelegt."
 
 #: ../libnautilus-private/nautilus-autorun.c:913
 msgid "You have just inserted a medium with digital photos."
-msgstr "Ein Datenträger mit Digitalfotos wurde eingestöpselt."
+msgstr "Ein Datenträger mit Digitalfotos wurde eingelegt."
 
 #: ../libnautilus-private/nautilus-autorun.c:915
 msgid "You have just inserted a digital audio player."
-msgstr "Ein digitaler Musik-Player wurde eingestöpselt."
+msgstr "Ein digitaler Musik-Player wurde angeschlossen."
 
 #: ../libnautilus-private/nautilus-autorun.c:917
 msgid ""
