--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-07  Mario Blättermann  <mariobl@svn.gnome.org>
+
+	* de.po: Some fixes in German translation
+
 2008-12-03  Goran Rakić  <grakic@devbase.net>
 
         * sr.po, sr@latin.po: Fixed Ubuntu bug lp#197224.
