--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-08  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-12-07  Mario Blättermann  <mariobl@svn.gnome.org>
 
 	* de.po: Some fixes in German translation
