Fix callback connection to GtkMountOperation
2008-12-08  Tomas Bzatek  <tbzatek@redhat.com> 

        * libnautilus-private/nautilus-mime-actions.c:
        (activation_mount_not_mounted):
        Fix callback connection to GtkMountOperation


svn path=/trunk/; revision=14801

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-08  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* libnautilus-private/nautilus-mime-actions.c:
+	(activation_mount_not_mounted):
+	Fix callback connection to GtkMountOperation
+
 2008-12-06  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* cut-n-paste-code/libegg/eggtreemultidnd.c:
