--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-09  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-global-preferences.c:
+	Add 10GB size.
+
 2008-12-08  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* libnautilus-private/nautilus-mime-actions.c:
