--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-12-10  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-global-preferences.c:
+        * src/nautilus-file-management-properties.c:
+        * src/nautilus-file-management-properties.ui:
+	Update the 2GB and 4GB thumbnail limits to the new prefs API and
+	make sure they actually work.
+
 2008-12-09  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c (copy_move_file):
