--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-12-10  Alexander Larsson  <alexl@redhat.com>
 
+        * configure.in:
+        * libnautilus-private/apps_nautilus_preferences.schemas.in:
+        * libnautilus-private/nautilus-global-preferences.c:
+        * libnautilus-private/nautilus-global-preferences.h:
+        * libnautilus-private/nautilus-mime-actions.c:
+	Support PackageConfig application install for unsupported mime types.
+	Based on patch from Richard Hughes
+
+2008-12-10  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
         * libnautilus-private/nautilus-global-preferences.c:
         * src/nautilus-file-management-properties.c:
