--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-12-10  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-mime-actions.c:
+        (search_for_application_mime_type):
+	Fix warning
+
+2008-12-10  Alexander Larsson  <alexl@redhat.com>
+
         * configure.in:
         * libnautilus-private/apps_nautilus_preferences.schemas.in:
         * libnautilus-private/nautilus-global-preferences.c:
