Fix the build for OSes with format security turned on. (Ubuntu).
2008-12-12  A. Walton  <awalton@gnome.org>

	* libnautilus-private/nautilus-mime-actions.c
	(application_unhandled_file):
	Fix the build for OSes with format security turned on.
	(Ubuntu).


svn path=/trunk/; revision=14811

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-12-12  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-mime-actions.c
+	(application_unhandled_file):
+	Fix the build for OSes with format security turned on.
+	(Ubuntu).
+
 2008-12-11  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-actions.c:
