a couple of small fixes
svn path=/trunk/; revision=14812

--- a/po/fi.po
+++ b/po/fi.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-22 12:24+0300\n"
-"PO-Revision-Date: 2008-09-22 12:27+0300\n"
+"PO-Revision-Date: 2008-12-15 14:43+0200\n"
 "Last-Translator: Timo Jyrinki <timo.jyrinki@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -1880,7 +1880,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2074
 msgid "Do _not Empty Trash"
-msgstr "Ä_lä tyhjennä roskakoria"
+msgstr "Älä tyhje_nnä roskakoria"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2173
 #, c-format
@@ -3978,43 +3978,43 @@ msgstr "Siirrä avoin kansio roskakorista kohteeseen \"%s\""
 #, c-format
 msgid "Move the selected folder out of the trash to \"%s\""
 msgid_plural "Move the selected folders out of the trash to \"%s\""
-msgstr[0] "Siirrä valittu kansio roskokorista kohteeseen \"%s\""
-msgstr[1] "Siirrä valitut kansiot roskokorista kohteeseen \"%s\""
+msgstr[0] "Siirrä valittu kansio roskakorista kohteeseen \"%s\""
+msgstr[1] "Siirrä valitut kansiot roskakorista kohteeseen \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:7313
 #, c-format
 msgid "Move the selected folder out of the trash"
 msgid_plural "Move the selected folders out of the trash"
-msgstr[0] "Siirrä valittu kansio pois roskokorista"
-msgstr[1] "Siirrä valitut kansiot pois roskokorista"
+msgstr[0] "Siirrä valittu kansio pois roskakorista"
+msgstr[1] "Siirrä valitut kansiot pois roskakorista"
 
 #: ../src/file-manager/fm-directory-view.c:7319
 #, c-format
 msgid "Move the selected file out of the trash to \"%s\""
 msgid_plural "Move the selected files out of the trash to \"%s\""
-msgstr[0] "Siirrä valittu tiedosto roskokorista kohteeseen \"%s\""
-msgstr[1] "Siirrä valitut tiedostot roskokorista kohteeseen \"%s\""
+msgstr[0] "Siirrä valittu tiedosto roskakorista kohteeseen \"%s\""
+msgstr[1] "Siirrä valitut tiedostot roskakorista kohteeseen \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:7323
 #, c-format
 msgid "Move the selected file out of the trash"
 msgid_plural "Move the selected files out of the trash"
-msgstr[0] "Siirrä valittu tiedosto roskokorista kohteeseen"
-msgstr[1] "Siirrä valitut tiedostot roskokorista kohteeseen"
+msgstr[0] "Siirrä valittu tiedosto roskakorista kohteeseen"
+msgstr[1] "Siirrä valitut tiedostot roskakorista kohteeseen"
 
 #: ../src/file-manager/fm-directory-view.c:7329
 #, c-format
 msgid "Move the selected item out of the trash to \"%s\""
 msgid_plural "Move the selected items out of the trash to \"%s\""
-msgstr[0] "Siirrä valittu kohde roskokorista kohteeseen \"%s\""
-msgstr[1] "Siirrä valitut kohteet roskokorista kohteeseen \"%s\""
+msgstr[0] "Siirrä valittu kohde roskakorista kohteeseen \"%s\""
+msgstr[1] "Siirrä valitut kohteet roskakorista kohteeseen \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:7333
 #, c-format
 msgid "Move the selected item out of the trash"
 msgid_plural "Move the selected items out of the trash"
-msgstr[0] "Siirrä valittu kohde roskokorista kohteeseen"
-msgstr[1] "Siirrä valitut kohteet roskokorista kohteeseen"
+msgstr[0] "Siirrä valittu kohde roskakorista kohteeseen"
+msgstr[1] "Siirrä valitut kohteet roskakorista kohteeseen"
 
 #. add the "open in new window" menu item
 #: ../src/file-manager/fm-directory-view.c:7551
