Fix new windows not appearing after successful mount (needed for #524485)
2008-12-15  Tomas Bzatek  <tbzatek@redhat.com> 

        * libnautilus-private/nautilus-mime-actions.c:
        (activation_mount_not_mounted):
        Fix new windows not appearing after successful mount
        (needed for #524485)


svn path=/trunk/; revision=14813

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-12-15  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* libnautilus-private/nautilus-mime-actions.c:
+	(activation_mount_not_mounted):
+	Fix new windows not appearing after successful mount
+	(needed for #524485)
+
 2008-12-12  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-mime-actions.c
