Remove code that supports KDE2 style trash handling.
        * src/nautilus-application.c: Remove code that supports KDE2
        style trash handling.


svn path=/trunk/; revision=14814

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-12-15  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 564207 – don't look for old kde trash
+
+	* src/nautilus-application.c: Remove code that supports KDE2 
+	style trash handling.
+
 2008-12-15  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* libnautilus-private/nautilus-mime-actions.c:
