Added. Added. Added. Added. Added. Added. Added. Import eel tests
2008-12-15  Alexander Larsson  <alexl@redhat.com>

        * test/Makefile.am:
        * test/test-eel-background.c: Added.
        * test/test-eel-editable-label.c: Added.
        * test/test-eel-image-scrolled.c: Added.
        * test/test-eel-image-table.c: Added.
        * test/test-eel-labeled-image.c: Added.
        * test/test-eel-pixbuf-scale.c: Added.
        * test/test-eel-widgets.c: Added.
        * test/test.h:
	Import eel tests


svn path=/trunk/; revision=14816

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
+        * test/Makefile.am:
+        * test/test-eel-background.c: Added.
+        * test/test-eel-editable-label.c: Added.
+        * test/test-eel-image-scrolled.c: Added.
+        * test/test-eel-image-table.c: Added.
+        * test/test-eel-labeled-image.c: Added.
+        * test/test-eel-pixbuf-scale.c: Added.
+        * test/test-eel-widgets.c: Added.
+        * test/test.h:
+	Import eel tests
+
+2008-12-15  Alexander Larsson  <alexl@redhat.com>
+
         * Makefile.am:
         * acconfig.h:
         * configure.in:
