Remove eel-feature.h
2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Remove eel-feature.h



svn path=/trunk/; revision=14817

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Remove eel-feature.h
+
+2008-12-15  Alexander Larsson  <alexl@redhat.com>
+
         * test/Makefile.am:
         * test/test-eel-background.c: Added.
         * test/test-eel-editable-label.c: Added.
