Update for release
2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	


svn path=/trunk/; revision=14818

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.25.2 are:
+* Merged eel into nautilus
+* Use single glib/gtk includes
+* Support PackageKit application search
+* Fix new windows not appearing after successful mount
+* Remove support for old KDE trash dirs
+
 Major changes in 2.25.1 are:
 * Remove depencency on libgnome & gnome-vfs
 * Fix crashes
