--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+	
+2008-12-15  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Remove eel-feature.h
 
