--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-15  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation.
+
 === nautilus 2.25.2 ===
 
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
