Remove the CD/DVD creator from the places menu, and the places sidebar
2008-12-16  Bastien Nocera  <hadess@hadess.net>

	* src/nautilus-window-menus.c:
	* src/nautilus-window-private.h:
	* src/nautilus-window.c (nautilus_window_constructor):
	Remove the CD/DVD creator from the places menu, and the
	places sidebar (Closes: #508384)


svn path=/trunk/; revision=14824

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-12-16  Bastien Nocera  <hadess@hadess.net>
+
+	* src/nautilus-window-menus.c:
+	* src/nautilus-window-private.h:
+	* src/nautilus-window.c (nautilus_window_constructor):
+	Remove the CD/DVD creator from the places menu, and the
+	places sidebar (Closes: #508384)
+
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
