Allow deleting of custom emblems. (#112292) Patch from DESSAI Imrane
2008-12-19  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-property-browser.c:
	Allow deleting of custom emblems. (#112292)
	Patch from DESSAI Imrane 


svn path=/trunk/; revision=14826

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-19  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-property-browser.c:
+	Allow deleting of custom emblems. (#112292)
+	Patch from DESSAI Imrane 
+
 2008-12-16  Bastien Nocera  <hadess@hadess.net>
 
 	* src/nautilus-window-menus.c:
