--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-27  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-12-21  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
