--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-03  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-12-29  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
