added uzbek translations by nurali
svn path=/trunk/; revision=14832

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-06  Nurali Abdurahmonov  <mavnur@gmail.com>
+
+	* uz.po: Added uzbek translation
+	* uz@cyrillic.po: Added uzbek cyrillic translation
+	* LINGUAS: added uz and uz@cyrillic
+
 2009-01-06  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
