--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-08  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2009-01-06  Nurali Abdurahmonov  <mavnur@gmail.com>
 
 	* uz.po: Added uzbek translation
