small change after a discussion on IRC
svn path=/trunk/; revision=14834

--- a/po/fi.po
+++ b/po/fi.po
@@ -35,7 +35,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-22 12:24+0300\n"
-"PO-Revision-Date: 2008-12-15 14:43+0200\n"
+"PO-Revision-Date: 2009-01-10 21:14+0200\n"
 "Last-Translator: Timo Jyrinki <timo.jyrinki@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -3870,7 +3870,7 @@ msgstr "Yhdistä tähän palvelimeen pysyvästi"
 #: ../src/file-manager/fm-directory-view.c:6723
 #: ../src/file-manager/fm-directory-view.c:6792
 msgid "_Mount Volume"
-msgstr "_Liitä taltio"
+msgstr "_Liitä"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6708
@@ -3883,7 +3883,7 @@ msgstr "Liitä valittu taltio"
 #: ../src/file-manager/fm-directory-view.c:6727
 #: ../src/file-manager/fm-directory-view.c:6796
 msgid "_Unmount Volume"
-msgstr "_Irrota taltio"
+msgstr "_Irrota"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6712
@@ -3896,7 +3896,7 @@ msgstr "Irrota valittu taltio"
 #: ../src/file-manager/fm-directory-view.c:6731
 #: ../src/file-manager/fm-directory-view.c:6800
 msgid "_Eject Volume"
-msgstr "_Poista taltio asemasta"
+msgstr "_Poista asemasta"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6716
