--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-12  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-link.c
+	(nautilus_link_get_link_info_given_file_contents):
+	Fix a crasher on broken desktop entry files.
+	Closes bug #567475.
+
 2008-12-19  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-property-browser.c:
