--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2009-01-12  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-link.c
+	(nautilus_link_get_link_icon_from_desktop):
+	Fix last commit to actually patch the right part of the file.
+
+2009-01-12  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-link.c
 	(nautilus_link_get_link_info_given_file_contents):
 	Fix a crasher on broken desktop entry files.
 	Closes bug #567475.
