--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-13  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (fm_directory_view_notify_selection_changed):
+	Don't get selection unless debugging is really turned on.
+	(For performance reasons)
+
 2009-01-12  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c (file_changed_callback):
