Convert Request from struct of gboolean to guin32 bitfield. This is both
2009-01-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-file.c:
	Convert Request from struct of gboolean to guin32 bitfield.
	This is both smaller and faster, plus it allows some further optimizations to come.


svn path=/trunk/; revision=14846

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-01-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-directory-private.h:
+        * libnautilus-private/nautilus-file.c:
+	Convert Request from struct of gboolean to guin32 bitfield.
+	This is both smaller and faster, plus it allows some further optimizations to come.
+
+2009-01-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-icon-container.c:
         * libnautilus-private/nautilus-icon-private.h:
 	Only send selection_changed once when removing lots of files.
