--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-01-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-directory-private.h:
+	Fixed type (& not &&).
+	Also add some paranthesises to args for macro safety.
+
+2009-01-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
 	Don't need the want_foo calls, can just pass in
 	the request type directly now.
