Updated Norwegian bokmål translation.
2009-01-13  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

svn path=/trunk/; revision=14850

--- a/po/nb.po
+++ b/po/nb.po
@@ -6739,7 +6739,7 @@ msgstr "Disse filene ligger på en digital lydspiller."
 
 #: ../src/nautilus-x-content-bar.c:88
 msgid "The media contains software."
-msgstr "Dete mediet inneholder programvare."
+msgstr "Mediet inneholder programvare."
 
 #. fallback to generic greeting
 #: ../src/nautilus-x-content-bar.c:91
