--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-13  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2009-01-13  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
