Remove Go to Burn menu items to avoid error spew.
2009-01-13  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-navigation-window-ui.xml:
        * src/nautilus-spatial-window-ui.xml:
	Remove Go to Burn menu items to avoid error spew.



svn path=/trunk/; revision=14855

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-01-13  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-navigation-window-ui.xml:
+        * src/nautilus-spatial-window-ui.xml:
+	Remove Go to Burn menu items to avoid error spew.
+
+2009-01-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-debug-log.c:
         (nautilus_debug_logv):
 	Make space for terminating zero
