--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-14  A. Walton  <awalton@gnome.org>
+
+	* src/file-manager/fm-ditem-page.c (create_page):
+	Fix another crasher when attempting to get properties 
+	on a damaged Desktop Entry file.
+
 2009-01-13  A. Walton  <awalton@gnome.org>
 
 	* src/file-manager/fm-empty-view.c (fm_empty_view_end_loading),
