Update for release
2009-01-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release



svn path=/trunk/; revision=14866

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-19  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2009-01-15  Richard Hughes  <richard@hughsie.com>
 
 	* libnautilus-private/nautilus-mime-actions.c:
