--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.25.3 are:
+* Remove CD/DVD creator from places menu and sidebar
+* Allow deleting custom emblems
+* Fix crashes
+* Don't show read-only emblems in trash
+* Trash performance fixes
+* General performance fixes
+* Update to new PackageKit API
+
 Major changes in 2.25.2 are:
 * Merged eel into nautilus
 * Use single glib/gtk includes
